# rs_grpc_boilerplate

./: .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
proto/: calculator.proto
proto/calculator/v1/: calculator.proto
src/: main.rs
src/interceptor/: api_key.rs
src/middleware/: logger.rs
src/service/: calculator_service.rs  mod.rs
