[package]
name = "grpc_boilerplate"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.5"
hyper = "1.4.1"
log = "0.4.22"
prost = "0.13.2"
tokio = { version = "1.40.0", features = ["full"] }
tonic = { version = "0.12.2" }
tonic-reflection = "0.12.2"
tower = "0.5.0"

[build-dependencies]
tonic-build = "0.12.2"
